--- a/public/style.css
+++ b/public/style.css
@@ -131,14 +131,14 @@ body {
   border-color: var(--primary-color);
 }
 
-.hamburger {
+.ham1 {
   display: none;
   flex-direction: column;
   cursor: pointer;
   gap: 4px;
 }
 
-.hamburger span {
+.ham1 span {
   width: 25px;
   height: 3px;
   background: var(--text-color);
@@ -1063,19 +1063,19 @@ section {
     left: 0;
   }
 
-  .hamburger {
+  .ham1 {
     display: flex;
   }
 
-  .hamburger.active span:nth-child(1) {
+  .ham1.active span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
   }
 
-  .hamburger.active span:nth-child(2) {
+  .ham1.active span:nth-child(2) {
     opacity: 0;
   }
 
-  .hamburger.active span:nth-child(3) {
+  .ham1.active span:nth-child(3) {
     transform: rotate(-45deg) translate(7px, -6px);
   }
 
