--- a/public/style.css
+++ b/public/style.css
@@ -388,6 +388,15 @@ body {
   .home1-buttons {
     align-items: center;
   }
+  @keyframes float {
+    0%,
+    100% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(20px);
+    }
+  }
 }
 
 section {
